gap between buttons and graph is fixed

--- a/app/styles/_line_graph_overwrite.scss
+++ b/app/styles/_line_graph_overwrite.scss
@@ -331,7 +331,7 @@
 	.patient_dashdoard_btns{
 		clear: left;
 	    display: inline-block;
-	    margin: 380px 0px 20px;
+	 /*   margin: 380px 0px 20px;*/
 	    margin: 0px 0px 20px;
 	    width: 100%;
 	    .dropdown-menu{
